Bug 854094. Assign the principal of the receiving page to remote MediaStreams. r=jesup